ADD_LIBRARY(shapeLib STATIC
  dbfopen.c
  shapefil.h
  shpopen.c)

IF("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "x86_64")
  if (CMAKE_COMPILER_IS_GNUCC AND CMAKE_COMPILER_IS_GNUCXX)
    SET_TARGET_PROPERTIES(shapeLib PROPERTIES COMPILE_FLAGS -fPIC)
  endif ()
ENDIF("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "x86_64")

SET_TARGET_PROPERTIES(shapeLib PROPERTIES OUTPUT_NAME
  "shapeLib-${MODEL_MAJOR}.${MODEL_MINOR}")

TARGET_LINK_LIBRARIES(shapeLib ${VLE_LIBRARIES})

INSTALL(TARGETS shapeLib ARCHIVE DESTINATION lib)

install(FILES shapefil.h
  DESTINATION src)
