SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_AUTOMOC ON)

FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})
FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(XMLDEPS libxml-2.0)
INCLUDE_DIRECTORIES(${XMLDEPS_INCLUDE_DIRS})

INCLUDE_DIRECTORIES(${VLE_INCLUDE_DIRS})

IF (VLE_VERSION)
  INCLUDE_DIRECTORIES(${VLE_BINARY_DIR}/src ${VLE_SOURCE_DIR}/src
    ${Boost_INCLUDE_DIRS} ${VLEDEPS_INCLUDE_DIRS})
  SET(V_LIB vlelib)
  IF (WIN32)
    LINK_DIRECTORIES(${VLEDEPS_LIBRARY_DIRS} ${Boost_LIBRARY_DIRS})
  ENDIF (WIN32)
ELSE (VLE_VERSION)
  MESSAGE(STATUS "No VLE_VERSION detected, run standalone build")
  PKG_CHECK_MODULES(VLEDEPS REQUIRED vle-1.1)
  INCLUDE_DIRECTORIES(${VLEDEPS_INCLUDE_DIRS})
  LINK_DIRECTORIES(${VLEDEPS_LIBRARY_DIRS})
  SET(V_LIB "vle-1.1")
ENDIF (VLE_VERSION)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

SET(ExpCond_SOURCES plugin.cpp toolbar.cpp tab.cpp)

QT4_WRAP_UI(ui_toolbar_h  toolbar.ui)
QT4_WRAP_UI(ui_tab_h      tab.ui)

ADD_LIBRARY(ExperimentalConditions SHARED
  ${ExpCond_SOURCES}
  ${ui_toolbar_h}
  ${ui_tab_h} )

TARGET_LINK_LIBRARIES(ExperimentalConditions
  ${QT_LIBRARIES} ${INTL_LIB})

INSTALL(TARGETS ExperimentalConditions RUNTIME DESTINATION
  plugins/gvle2/condition LIBRARY DESTINATION plugins/gvle2/condition)
