install(FILES agentonlyc.vpz agentonly.vpz agentonlywakeup.vpz asynchronous.vpz
  counterlognormal.vpz counterregular.vpz counteruniform.vpz counter.vpz
  earlyPerturb.vpz equation10.vpz equation11.vpz equation12.vpz equation13.vpz
  equation14.vpz equation15.vpz equation1.vpz equation2.vpz equation3.vpz
  equation4.vpz equation5.vpz equation6.vpz equation7.vpz equation8.vpz
  equation9.vpz fddevs.vpz gensdelete.vpz gensgraph.vpz gensnetview.vpz
  gens.vpz genswithclass.vpz lifegame_txt.vpz lifegame.vpz
  lifegamewithclass_txt.vpz lifegamewithclass.vpz mealy2.vpz mealy.vpz
  moore2.vpz moore.vpz petrinet-and-timed.vpz petrinet-and.vpz
  petrinet-conflict.vpz petrinet-inout.vpz petrinet-meteo.vpz petrinet-mult.vpz
  petrinet-nand1.vpz petrinet-nand2.vpz petrinet-or-priority.vpz
  petrinet-or.vpz petrinet-simple.vpz qss_exp1_test.vpz qss_exp1_txt.vpz
  qss_exp1.vpz qss_exp2_txt.vpz qss_exp2.vpz qss_exp3_test.vpz qss_exp3_txt.vpz
  qss_exp3.vpz qss_exp4_txt.vpz qss_exp4.vpz qss_exp5.vpz qss_exp6.vpz
  qss_exp7.vpz recursive.vpz seir2.vpz seir.vpz sir2.vpz sir3.vpz sir4.vpz
  sir.vpz stage.vpz statechart10.vpz statechart11.vpz statechart2.vpz
  statechart3.vpz statechart4.vpz statechart5.vpz statechart6.vpz
  statechart7.vpz statechart8.vpz statechart9.vpz statechartMultipleSend.vpz
  statechart.vpz twotimesmodel.vpz DESTINATION exp)
