## TODO update testgens with update on translator 

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src ${VLE_INCLUDE_DIRS}
  ${Boost_INCLUDE_DIRS} ${CELLDEVS_INCLUDE_DIRS} ${CELLQSS_INCLUDE_DIRS}
  ${DECISION_INCLUDE_DIRS} ${DIFFERENCE_EQU_INCLUDE_DIRS}
  ${DIFFERENTIAL_EQU_INCLUDE_DIRS} ${DSDEVS_INCLUDE_DIRS} ${FSA_INCLUDE_DIRS}
  ${PETRINET_INCLUDE_DIRS})

LINK_DIRECTORIES(${VLE_LIBRARY_DIRS} ${Boost_LIBRARY_DIRS}
  ${CELLDEVS_LIBRARY_DIRS} ${CELLQSS_LIBRARY_DIRS} ${DECISION_LIBRARY_DIRS}
  ${DIFFERENCE_EQU_LIBRARY_DIRS} ${DIFFERENTIAL_EQU_LIBRARY_DIRS}
  ${DSDEVS_LIBRARY_DIRS} ${FSA_LIBRARY_DIRS} ${PETRINET_LIBRARY_DIRS} )

ADD_EXECUTABLE(testdecision testdecision.cpp)
ADD_EXECUTABLE(testfsa testfsa.cpp)
#TODO #ADD_EXECUTABLE(testgens testgens.cpp)
ADD_EXECUTABLE(testpetrinet testpetrinet.cpp)
ADD_EXECUTABLE(testsmartgardener testsmartgardener.cpp)
ADD_EXECUTABLE(testmanager testmanager.cpp)

TARGET_LINK_LIBRARIES(testdecision ${VLE_LIBRARIES} ${CELLDEVS_LIBRARIES}
  ${CELLQSS_LIBRARIES} ${DECISION_LIBRARIES} ${DIFFERENCE_EQU_LIBRARIES}
  ${DIFFERENTIAL_EQU_LIBRARIES} ${DSDEVS_LIBRARIES} ${FSA_LIBRARIES}
  ${PETRINET_LIBRARIES} ${Boost_LIBRARIES} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
  ${Boost_DATE_TIME_LIBRARY})

TARGET_LINK_LIBRARIES(testfsa ${VLE_LIBRARIES} ${CELLDEVS_LIBRARIES}
  ${CELLQSS_LIBRARIES} ${DECISION_LIBRARIES} ${DIFFERENCE_EQU_LIBRARIES}
  ${DIFFERENTIAL_EQU_LIBRARIES} ${DSDEVS_LIBRARIES} ${FSA_LIBRARIES}
  ${PETRINET_LIBRARIES} ${Boost_LIBRARIES} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
  ${Boost_DATE_TIME_LIBRARY})

#TARGET_LINK_LIBRARIES(testgens ${VLE_LIBRARIES} ${CELLDEVS_LIBRARIES}
#  ${CELLQSS_LIBRARIES} ${DECISION_LIBRARIES} ${DIFFERENCE_EQU_LIBRARIES}
#  ${DIFFERENTIAL_EQU_LIBRARIES} ${DSDEVS_LIBRARIES} ${FSA_LIBRARIES}
#  ${PETRINET_LIBRARIES} ${Boost_LIBRARIES} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
#  ${Boost_DATE_TIME_LIBRARY})

TARGET_LINK_LIBRARIES(testpetrinet ${VLE_LIBRARIES} ${CELLDEVS_LIBRARIES}
  ${CELLQSS_LIBRARIES} ${DECISION_LIBRARIES} ${DIFFERENCE_EQU_LIBRARIES}
  ${DIFFERENTIAL_EQU_LIBRARIES} ${DSDEVS_LIBRARIES} ${FSA_LIBRARIES}
  ${PETRINET_LIBRARIES} ${Boost_LIBRARIES} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
  ${Boost_DATE_TIME_LIBRARY})

TARGET_LINK_LIBRARIES(testsmartgardener ${VLE_LIBRARIES} ${CELLDEVS_LIBRARIES}
  ${CELLQSS_LIBRARIES} ${DECISION_LIBRARIES} ${DIFFERENCE_EQU_LIBRARIES}
  ${DIFFERENTIAL_EQU_LIBRARIES} ${DSDEVS_LIBRARIES} ${FSA_LIBRARIES}
  ${PETRINET_LIBRARIES} ${Boost_LIBRARIES} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
  ${Boost_DATE_TIME_LIBRARY})

TARGET_LINK_LIBRARIES(testmanager ${VLE_LIBRARIES} ${CELLDEVS_LIBRARIES}
  ${CELLQSS_LIBRARIES} ${DECISION_LIBRARIES} ${DIFFERENCE_EQU_LIBRARIES}
  ${DIFFERENTIAL_EQU_LIBRARIES} ${DSDEVS_LIBRARIES} ${FSA_LIBRARIES}
  ${PETRINET_LIBRARIES} ${Boost_LIBRARIES} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
  ${Boost_DATE_TIME_LIBRARY})

ADD_TEST(testdecision_test testdecision)
ADD_TEST(testfsa_test testfsa)
#ADD_TEST(testgens_test testgens)
ADD_TEST(testpetrinet_test testpetrinet)
ADD_TEST(testsmartgardener_test testsmartgardener)
ADD_TEST(testmanager_test testmanager)
